fix URL constructor deprecations